2005-07-27  James A. Morrison  <phython@gcc.gnu.org>

PR tree-optimization/22493
        * tree-vrp.c (extract_range_from_unary_expr): Deal with -fwrapv and
        VR_ANTI_RANGEs properly for NEGATE_EXPRs and ABS_EXPRs.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@102458 138bc75d-0d04-0410-961f-82ee72b054a4