gcc/testsuite/gcc.c-torture/execute/pr22493-1.c
@@ -1,0 +1,18 @@
+#include <limits.h>
+extern void abort ();
+extern void exit (int);
+void f(int i)
+{
+  if (i>0)
+    abort();
+  i = -i;
+  if (i<0)
+    return;
+  abort ();
+}
+
+int main(int argc, char *argv[])
+{
+  f(INT_MIN);
+  exit (0);
+}
